LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/pi_Pardot_Last_Scored_At__c.field-meta.xml
<CustomField>
    <fullName>pi_Pardot_Last_Scored_At__c</fullName>
    <label>Account Engagement Last Scored At</label>
    <type>DateTime</type>
</CustomField>