LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/pi_score__c.field-meta.xml
<CustomField>
    <fullName>pi_score__c</fullName>
    <label>Account Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>