LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/picampaignc__c.field-meta.xml
<CustomField>
    <fullName>picampaignc__c</fullName>
    <label>Account Engagement Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>