LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Pick_Record__c.field-meta.xml
<CustomField>
    <fullName>Pick_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pick Record</label>
    <type>Checkbox</type>
</CustomField>