LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Professional_Interest__c.field-meta.xml
<CustomField>
    <fullName>Professional_Interest__c</fullName>
    <label>Professional Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>