LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Rationale_for_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Rationale_for_Name_Change__c</fullName>
    <label>Rationale for Name Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>