LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <formula>Client_Contact__r.Reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason</label>
    <type>Text</type>
</CustomField>