LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Referral_Client__c.field-meta.xml
<CustomField>
    <fullName>Referral_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contact Directory (Referral Client)</relationshipLabel>
    <relationshipName>Client_Contact_Directory4</relationshipName>
    <type>Lookup</type>
</CustomField>