LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contact Directory (Referral Contact)</relationshipLabel>
    <relationshipName>Client_Contact_Directory4</relationshipName>
    <type>Lookup</type>
</CustomField>