LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Referred_By_Chamber__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Chamber__c</fullName>
    <formula>Client_Contact__r.Referred_By_Chamber__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred By Chamber</label>
    <type>Text</type>
</CustomField>