LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Relationship_Leader__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Leader__c</fullName>
    <label>Relationship Leader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>