LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contact Directory (Reports To)</relationshipLabel>
    <relationshipName>Client_Contact_Directory1</relationshipName>
    <type>Lookup</type>
</CustomField>