LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>