LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>