LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>