LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <label>Sub-Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>