LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Client_Contact__r.Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Type</label>
    <type>Text</type>
</CustomField>