LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Verified_DS_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>Verified_DS_Team_Date__c</fullName>
    <label>Verified DS Team Date</label>
    <type>DateTime</type>
</CustomField>