LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Verrified_by_DS_Team__c.field-meta.xml
<CustomField>
    <fullName>Verrified_by_DS_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verrified by DS Team</label>
    <type>Checkbox</type>
</CustomField>