LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/WCGT_Id__c.field-meta.xml
<CustomField>
    <fullName>WCGT_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>WCGT Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>