LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Young_CSL__c.field-meta.xml
<CustomField>
    <fullName>Young_CSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Young CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contact_Directory2</relationshipName>
    <type>Lookup</type>
</CustomField>