LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Client_Contact__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Designation__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>